update padding card bagno.html
aggiunta di un padding tra le card appartenenti alla classe card-ambiente

--- a/bagno.html
+++ b/bagno.html
@@ -693,6 +693,7 @@
         overflow: hidden;
         box-shadow: 0 4px 14px rgba(155, 155, 155, 0.3);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+        padding: 20px;
       }
     
       .card-ambiente:hover {
