Aggiunta layout a griglia per le card della sezione Bagni
- Inserito contenitore .ambienti-grid per avvolgere le card .card-ambiente
- Applicato gap di 40px tra le card tramite display: grid
- Migliorata leggibilità e spaziatura verticale delle card nella sezione Bagni

--- a/bagno.html
+++ b/bagno.html
@@ -607,6 +607,7 @@
     <section class="container">
         <h2>Bagni</h2>
 
+        <div class="ambienti-grid">
         <!-- Card 1: Bagno Ciliegio -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -663,6 +664,7 @@
                 <a href="bagnocontemporaneo.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
     </div>
    
     <style>
@@ -693,7 +695,6 @@
         overflow: hidden;
         box-shadow: 0 4px 14px rgba(155, 155, 155, 0.3);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
-        padding: 20px;
       }
     
       .card-ambiente:hover {
