add layout grid con gap
- Inserito contenitore .ambienti-grid per avvolgere le card .card-ambiente
- Applicato gap di 40px tra le card tramite display: grid
- Migliorata leggibilità e spaziatura verticale delle card nella sezione camera, cameretta, calssico, contemporaneo, cucine, industriale, minimal, saladapranzo e salotti"

--- a/camera.html
+++ b/camera.html
@@ -606,6 +606,9 @@
     <section class="container">
         <h2>Camere da letto</h2>
 
+        <div class="ambienti-grid">
+
+        
         <!-- Card 1: Camera da letto mosaico blu-->
         <div class="card-ambiente">
             <div class="img-container">
@@ -662,6 +665,7 @@
                 <a href="cameracontemporanea.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
     </div>
     <style>
       .ambienti {
