--- a/cameretta.html
+++ b/cameretta.html
@@ -599,6 +599,9 @@
     <section class="container">
         <h2>Camerette</h2>
 
+        <div class="ambienti-grid">
+
+        
         <!-- Card 1: Cameretta Camilla -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -656,6 +659,7 @@
                 <a href="cameretta-contemporanea.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
     </div>
     <style>
       .ambienti {
