--- a/classico.html
+++ b/classico.html
@@ -737,6 +737,8 @@
     <section class="container">
         <h2>Ambienti</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Cucina Provenza -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -825,6 +827,8 @@
                 <a href="bagnoclassico.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
 
     </section>
 </div>
