--- a/cucine.html
+++ b/cucine.html
@@ -599,6 +599,8 @@
     <section class="container">
         <h2>Cucine</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Cucina Provenza -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -656,6 +658,8 @@
                 <a href="cucinacontemporanea.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
     </div>
     <style>
       .ambienti {
