--- a/minimal.html
+++ b/minimal.html
@@ -738,6 +738,8 @@
     <section class="container">
         <h2>Ambienti</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Cucina Bauhaus -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -823,6 +825,8 @@
                 <a href="bagnominimal.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
 
     </section>
 </div>
