--- a/saladapranzo.html
+++ b/saladapranzo.html
@@ -602,6 +602,8 @@
     <section class="container">
         <h2>Sale da pranzo</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Sala da pranzo color vintage -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -661,6 +663,8 @@
                 <a href="saladapranzo-contemporanea.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
     </div>
         
     <style>
