--- a/salotti.html
+++ b/salotti.html
@@ -604,6 +604,8 @@
     <section class="container">
         <h2>Salotti</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Salotto modigliani -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -662,6 +664,8 @@
                 <a href="salottocontemporaneo.html" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
     </div>
     <style>
       .ambienti {
