--- a/industriale.html
+++ b/industriale.html
@@ -735,6 +735,8 @@
     <section class="container">
         <h2>Ambienti</h2>
 
+        <div class="ambienti-grid">
+
         <!-- Card 1: Cucina Bricks -->
         <div class="card-ambiente">
             <div class="img-container">
@@ -823,6 +825,8 @@
                 <a href="link-progetto-bagno-industriale" class="btn-progetto">Progetto completo →</a>
             </div>
         </div>
+      </div>
+
 
     </section>
 </div>
