--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container d-flex justify-content-between align-items-center">
       <!-- Logo -->
       <div>
-        <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+        <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
         
       </div>
   
@@ -400,7 +400,7 @@
     <div class="container d-flex flex-column flex-md-row align-items-center">
       <div class="content px-4 px-md-5">
         <h2 id="titolo-guida" class="text-white d-flex align-items-center gap-2">
-          <span class="icon">🎨</span> GGM Design, la tua guida agli ambienti
+          GGM Design, la tua guida agli ambienti
         </h2>
         <p class="mt-4 text-light">
           GGM Design è la community che approfondisce l’interior design, l'arte di trasformare gli spazi interni in ambienti funzionali ed esteticamente piacevoli, 
@@ -627,19 +627,19 @@
 
       <div class="stili-wrapper">
           <div class="stile-box">
-              <img src="/img/HOME PAGE IMM/icona-stile-classico.png" alt="Stile classico" class="img-stile">
+              <img src="img/HOME PAGE IMM/icona-stile-classico.png" alt="Stile classico" class="img-stile">
               <a href="classico.html" class="stile-link">Stile classico</a>
           </div>
           <div class="stile-box">
-              <img src="/img/HOME PAGE IMM/icona-stile-industriale.jpg" alt="Stile industriale" class="img-stile">
+              <img src="img/HOME PAGE IMM/icona-stile-industriale.jpg" alt="Stile industriale" class="img-stile">
               <a href="industriale.html" class="stile-link">Stile industriale</a>
           </div>
           <div class="stile-box">
-              <img src="/img/HOME PAGE IMM/icona-stile-minimal.jpeg" alt="Stile minimal" class="img-stile">
+              <img src="img/HOME PAGE IMM/icona-stile-minimal.jpeg" alt="Stile minimal" class="img-stile">
               <a href="minimal.html" class="stile-link">Stile minimal</a>
           </div>
           <div class="stile-box">
-              <img src="/img/HOME PAGE IMM/icona-stile-contemporaneo.jpg" alt="Stile contemporaneo" class="img-stile">
+              <img src="img/HOME PAGE IMM/icona-stile-contemporaneo.jpg" alt="Stile contemporaneo" class="img-stile">
               <a href="contemporaneo.html" class="stile-link">Stile contemporaneo</a>
           </div>
       </div>
