--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     position: relative;
     width: 100%;
     height: 100vh; /* Occupare tutta l'altezza della finestra */
-    background-image: url('/img/HOME\ PAGE\ IMM/home-copertina.jpg'); /* Sostituisci con il tuo percorso immagine */
+    background-image: url('img/HOME\ PAGE\ IMM/home-copertina.jpg'); /* Sostituisci con il tuo percorso immagine */
     background-size: cover;
     background-position: center;
     display: flex;
