--- a/index.html
+++ b/index.html
@@ -764,37 +764,37 @@
       <div class="ambienti-wrapper">
         <div class="ambiente-box">
           <a href="bagno.html">
-            <img src="/img/HOME PAGE IMM/icona-bagno.png" alt="Bagno">
+            <img src="img/HOME PAGE IMM/icona-bagno.png" alt="Bagno">
             <p>Bagno</p>
           </a>
         </div>
         <div class="ambiente-box">
           <a href="camera.html">
-            <img src="/img/HOME PAGE IMM/icona-camera.png" alt="Camera da letto">
+            <img src="img/HOME PAGE IMM/icona-camera.png" alt="Camera da letto">
             <p>Camera da letto</p>
           </a>
         </div>
         <div class="ambiente-box">
           <a href="cameretta.html">
-            <img src="/img/HOME PAGE IMM/icona-cameretta.png" alt="Cameretta">
+            <img src="img/HOME PAGE IMM/icona-cameretta.png" alt="Cameretta">
             <p>Cameretta</p>
           </a>
         </div>
         <div class="ambiente-box">
           <a href="cucine.html">
-            <img src="/img/HOME PAGE IMM/icona-cucina.png" alt="Cucina">
+            <img src="img/HOME PAGE IMM/icona-cucina.png" alt="Cucina">
             <p>Cucina</p>
           </a>
         </div>
         <div class="ambiente-box">
           <a href="saladapranzo.html">
-            <img src="/img/HOME PAGE IMM/icona-salapranzo.png" alt="Sala da pranzo">
+            <img src="img/HOME PAGE IMM/icona-salapranzo.png" alt="Sala da pranzo">
             <p>Sala da pranzo</p>
           </a>
         </div>
         <div class="ambiente-box">
           <a href="salotti.html">
-            <img src="/img/HOME PAGE IMM/icona-salotto.png" alt="Soggiorno">
+            <img src="img/HOME PAGE IMM/icona-salotto.png" alt="Soggiorno">
             <p>Soggiorno</p>
           </a>
         </div>
