--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
         <!-- CARD 1 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/HOME PAGE IMM/cucina-provenza.jpeg" alt="Cucina Provenza">
+            <img src="img/CAROSELLI/cucina-classica.jpeg" alt="Cucina Provenza">
           </div>
           <div class="ambiente-info">
             <h3>Cucina Provenza</h3>
@@ -827,51 +827,52 @@
         <!-- CARD 2 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/STILE CLASSICO/Salotto 6.jpeg" alt="Salotto Modigliani">
+            <img src="img/CAROSELLI/salotto-minimal.jpeg" alt="Salotto minimal line">
           </div>
           <div class="ambiente-info">
-            <h3>Salotto Modigliani</h3>
+            <h3>Salotto minimal line</h3>
             <p>
-              Uno spazio luminoso e accogliente, dai toni neutri, in cui fa da protagonista una libreria a muro in legno, classica e sofisticata.
-              Un luogo ideale dove bellezza incontra funzionalità, in un equilibrio perfetto di design.
+              Un ambiente elegante e tranquillo, in cui risalta una scala sospesa. 
+              Spazi aperti, arredi essenziali e una palette di colori neutri, il luogo perfetto dove il design si fonde con la funzionalità.
             </p>
-            <a href="salottoModigliani.html" class="btn-progetto">Progetto completo →</a>
+            <a href="salottominimal.html" class="btn-progetto">Progetto completo →</a>
           </div>
         </div>
   
         <!-- CARD 3 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/STILE CLASSICO/Sala da pranzo 2.jpeg" alt="Sala da pranzo color vintage">
+            <img src="img/CAROSELLI/cucina-industriale.jpeg" alt="Cucina Bricks">
           </div>
           <div class="ambiente-info">
-            <h3>Sala da pranzo color vintage</h3>
+            <h3>Cucina Bricks</h3>
             <p>
-              Una sala ampia e luminosa, perfetta per accogliere ospiti. 
-              Un open space classico, colorato e molto raffinato, in cui i pezzi vintage si sposano perfettamente con gli arredi.  
+              Una cucina industriale di grande effetto, separata da una grande vetrata con riporti neri.
+              Eleganti piastrelle nere e bianche caratterizzano l’intera cucina, che riprende i colori del legno e del grigio.   
             </p>
-            <a href="saladapranzoclassica.html" class="btn-progetto">Progetto completo →</a>
+            <a href="cucinaindustriale.html" class="btn-progetto">Progetto completo →</a>
           </div>
         </div>
   
         <!-- CARD 4 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/STILE CLASSICO/Camera da letto 1.jpeg" alt="Camera da letto mosaico blu">
+            <img src="img/CAROSELLI/camera-contemporanea.jpeg" alt="Camera da letto fiori di seta">
           </div>
           <div class="ambiente-info">
-            <h3>Camera da letto mosaico blu</h3>
+            <h3>Camera da letto fiori di seta</h3>
             <p>
-              Una camera raffinata, con rimandi all’antico, i mobili in legno massello, la posa di un mosaico blu e giallo, rivestimento del letto in velluto blu, una chicca di eleganza senza tempo.
+              Camera da letto raffinata e accogliente, con una parete decorata da un elegante motivo floreale che crea un'atmosfera rilassante. 
+              L'arredamento con tonalità naturali e dettagli di design, enfatizza la luminosità dello spazio.
             </p>
-            <a href="cameraclassica.html" class="btn-progetto">Progetto completo →</a>
+            <a href="cameracontemporanea.html" class="btn-progetto">Progetto completo →</a>
           </div>
         </div>
   
         <!-- CARD 5 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/STILE CLASSICO/Cameretta 2.1.jpeg" alt="Cameretta Camilla">
+            <img src="img/CAROSELLI/cameretta-classica.jpeg" alt="Cameretta Camilla">
           </div>
           <div class="ambiente-info">
             <h3>Cameretta Camilla</h3>
@@ -886,15 +887,14 @@
         <!-- CARD 6 -->
         <div class="card-ambiente">
           <div class="img-container">
-            <img src="/img/STILE CLASSICO/Bagno 1.jpeg" alt="Bagno ciliegio">
+            <img src="img/CAROSELLI/bagno-minimal.jpeg" alt="Bagno soft minimal">
           </div>
           <div class="ambiente-info">
-            <h3>Bagno ciliegio</h3>
+            <h3>Bagno soft minimal</h3>
             <p>
-              Un bagno elegantemente rifinito, con marmi bianchi e lussuosi, alternati a carta da parati sui toni champagne. 
-              Al centro una grande vasca idromassaggio, perfetta per concedersi momenti di puro relax. 
+              Un bagno soft e minimal, dove la vasca freestanding all'esterno diventa il cuore di un ambiente rilassante e raffinato, con linee pulite e colori tenui che evocano serenità e benessere. 
             </p>
-            <a href="bagnoclassico.html" class="btn-progetto">Progetto completo →</a>
+            <a href="bagnominimal.html" class="btn-progetto">Progetto completo →</a>
           </div>
         </div>
       </div>
