img logo footer

--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
     <div class="footer-container">
         <!-- Sezione Spazi Belli -->
         <div class="footer-section">
-            <img src="/img/logo.png" alt="Logo GGM Design" class="logo-small">
+            <img src="img/logo.png" alt="Logo GGM Design" class="logo-small">
             <ul>
               <li><a href="privaci.html">Privacy</a></li>
               <li><a href="termini.html">Condizioni</a></li>
