update general cucine

--- a/cucine.html
+++ b/cucine.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -392,14 +392,17 @@
        <!-- Carosello di immagini -->
        <div class="carosello">
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cucina-classica.jpeg" alt="Immagine 1" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cucina-minimal.jpeg" alt="Immagine 2" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cucina-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
          </div>
+         <div class="slide">
+          <img src="img/CAROSELLI/cucina-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
      
          <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
          <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -604,7 +607,7 @@
         <!-- Card 1: Cucina Provenza -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-classica.jpeg" alt="Cucina Provenza">
+                <img src="img/CAROSELLI/cucina-classica.jpeg" alt="Cucina Provenza">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Provenza</h3>
@@ -619,7 +622,7 @@
         <!-- Card 2: Cucina Bauhaus -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-minimal.jpeg" alt="Cucina Bauhaus">
+                <img src="img/CAROSELLI/cucina-minimal.jpeg" alt="Cucina Bauhaus">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Bauhaus</h3>
@@ -633,7 +636,7 @@
         <!-- Card 3: Cucina Bricks -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-industriale.jpeg" alt="Cucina Bricks">
+                <img src="img/CAROSELLI/cucina-industriale.jpeg" alt="Cucina Bricks">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Bricks</h3>
@@ -648,7 +651,7 @@
         <!-- Card 4: Cucina grigio quarzo -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cucina-contemporanea.jpeg" alt="Cucina grigio quarzo">
+                <img src="img/CAROSELLI/cucina-contemporanea.jpeg" alt="Cucina grigio quarzo">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina grigio quarzo</h3>
@@ -829,7 +832,7 @@
       <div class="footer-container">
           <!-- Sezione Spazi Belli -->
           <div class="footer-section">
-              <img src="../img/logo.png" class="logo-small">
+              <img src="img/logo.png" class="logo-small">
               <ul>
                 <li><a href="privaci.html">Privacy</a></li>
                 <li><a href="termini.html">Condizioni</a></li>
