update general salotti

--- a/salotti.html
+++ b/salotti.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -393,13 +393,16 @@
   <!-- Carosello di immagini -->
   <div class="carosello">
     <div class="slide">
-      <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+      <img src="img/CAROSELLI/salotto-classico.jpeg" alt="Immagine 1" onclick="openImage(this)">
     </div>
     <div class="slide">
-      <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+      <img src="img/CAROSELLI/salotto-minimal.jpeg" alt="Immagine 2" onclick="openImage(this)">
     </div>
     <div class="slide">
-      <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+      <img src="img/CAROSELLI/salotto-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
+    </div>
+    <div class="slide">
+      <img src="img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Immagine 3" onclick="openImage(this)">
     </div>
 
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -609,7 +612,7 @@
         <!-- Card 1: Salotto modigliani -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-classico.jpeg" alt="Salotto Modigliani">
+                <img src="img/CAROSELLI/salotto-classico.jpeg" alt="Salotto Modigliani">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto Modigliani</h3>
@@ -624,7 +627,7 @@
         <!-- Card 2: Salotto minimal line -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-minimal.jpeg" alt="Salotto minimal line">
+                <img src="img/CAROSELLI/salotto-minimal.jpeg" alt="Salotto minimal line">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto minimal line</h3>
@@ -639,7 +642,7 @@
         <!-- Card 3: Salotto industrial loft -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-industriale.jpeg" alt="Salotto industrial loft">
+                <img src="img/CAROSELLI/salotto-industriale.jpeg" alt="Salotto industrial loft">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto industrial loft</h3>
@@ -654,7 +657,7 @@
         <!-- Card 4: Salotto scala di luce -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Salotto scala di luce">
+                <img src="img/CAROSELLI/salotto-contemporaneo.jpeg" alt="Salotto scala di luce">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto scala di luce</h3>
@@ -833,7 +836,7 @@
       <div class="footer-container">
           <!-- Sezione Spazi Belli -->
           <div class="footer-section">
-              <img src="../img/logo.png" class="logo-small">
+              <img src="img/logo.png" class="logo-small">
               <ul>
                 <li><a href="privaci.html">Privacy</a></li>
                 <li><a href="termini.html">Condizioni</a></li>
