update general sala da pranzo

--- a/saladapranzo.html
+++ b/saladapranzo.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -393,14 +393,17 @@
        <!-- Carosello di immagini -->
        <div class="carosello">
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+           <img src="img/CAROSELLI/saladapranzo-classica.jpeg" alt="Immagine 1" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+           <img src="img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Immagine 2" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+           <img src="img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
          </div>
+         <div class="slide">
+          <img src="img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
      
          <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
          <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -607,7 +610,7 @@
         <!-- Card 1: Sala da pranzo color vintage -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-classica.jpeg" alt="Sala da pranzo color vintage">
+                <img src="img/CAROSELLI/saladapranzo-classica.jpeg" alt="Sala da pranzo color vintage">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo color vintage</h3>
@@ -622,7 +625,7 @@
         <!-- Card 2: Sala da pranzo legno e luce -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Sala da pranzo legno e luce">
+                <img src="img/CAROSELLI/saladapranzo-minimal.jpeg" alt="Sala da pranzo legno e luce">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo legno e luce</h3>
@@ -637,7 +640,7 @@
         <!-- Card 3: Sala da pranzo bistrot -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Sala da pranzo bistrot">
+                <img src="img/CAROSELLI/saladapranzo-industriale.jpeg" alt="Sala da pranzo bistrot">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo bistrot</h3>
@@ -652,7 +655,7 @@
         <!-- Card 4: Sala da pranzo fusion style -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Sala da pranzo fusion style">
+                <img src="img/CAROSELLI/saladapranzo-contemporanea.jpeg" alt="Sala da pranzo fusion style">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo fusion style</h3>
@@ -913,7 +916,7 @@
     <div class="footer-container">
         <!-- Sezione Spazi Belli -->
         <div class="footer-section">
-            <img src="../img/logo.png" class="logo-small">
+            <img src="img/logo.png" class="logo-small">
             <ul>
               <li><a href="privaci.html">Privacy</a></li>
               <li><a href="termini.html">Condizioni</a></li>
