prova card camera

--- a/camera.html
+++ b/camera.html
@@ -616,7 +616,7 @@
         <!-- Card 1: Camera da letto mosaico blu-->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="img/CAROSELLI/camera-classica.jpeg" alt="Camera da letto mosaico blu">
+                <img src="img/STILE CLASSICO/Camera da letto 1.jpeg" alt="Camera da letto mosaico blu">
             </div>
             <div class="ambiente-info">
                 <h3>Camera da letto mosaico blu</h3>
