--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
             <h3>Cucina Provenza</h3>
             <p>
               Le cucine classiche uniscono semplicità e intramontabile eleganza, non rinunciano alle comodità, 
-              agli 
+              agli elettrodomestici di ultima generazione e ai pezzi di grande design, creando un ambiente di grande effetto.
             </p>
             <a href="cucinaclassica.html" class="btn-progetto">Progetto completo →</a>
           </div>
