--- a/cameretta.html
+++ b/cameretta.html
@@ -36,7 +36,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -393,14 +393,17 @@
        <!-- Carosello di immagini -->
        <div class="carosello">
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cameretta-classica.jpeg" alt="Immagine 1" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 2" onclick="openImage(this)">
          </div>
          <div class="slide">
-           <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+           <img src="img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 3" onclick="openImage(this)">
          </div>
+         <div class="slide">
+          <img src="img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
      
          <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
          <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -605,7 +608,7 @@
         <!-- Card 1: Cameretta Camilla -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-classica.jpeg" alt="Cameretta Camilla">
+                <img src="img/CAROSELLI/cameretta-classica.jpeg" alt="Cameretta Camilla">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta Camilla</h3>
@@ -620,7 +623,7 @@
         <!-- Card 2: Cameretta white dream -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Cameretta white dream">
+                <img src="img/CAROSELLI/cameretta-minimal.jpeg" alt="Cameretta white dream">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta white dream</h3>
@@ -634,7 +637,7 @@
         <!-- Card 3: Cameretta bike -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Cameretta bike">
+                <img src="img/CAROSELLI/cameretta-industriale.jpeg" alt="Cameretta bike">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta bike</h3>
@@ -648,7 +651,7 @@
         <!-- Card 4: Cameretta neo spazio -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Cameretta neo spazio">
+                <img src="img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Cameretta neo spazio">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta neo spazio</h3>
@@ -826,7 +829,7 @@
   <div class="footer-container">
       <!-- Sezione Spazi Belli -->
       <div class="footer-section">
-          <img src="../img/logo.png" class="logo-small">
+          <img src="img/logo.png" class="logo-small">
           <ul>
             <li><a href="privaci.html">Privacy</a></li>
             <li><a href="termini.html">Condizioni</a></li>
