update stile classico
immagini

--- a/classico.html
+++ b/classico.html
@@ -37,7 +37,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <div>
-      <img src="/img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
+      <img src="img/logo.png" alt="LOGO" class="img-fluid" style="height: 50px;">
       
     </div>
 
@@ -393,13 +393,22 @@
       <!-- Carosello di immagini -->
       <div class="carosello">
         <div class="slide">
-          <img src="../img/CAROSELLI/cameretta-contemporanea.jpeg" alt="Immagine 1" onclick="openImage(this)">
+          <img src="img/CAROSELLI/cucina-classica.jpeg" alt="Immagine 1" onclick="openImage(this)">
         </div>
         <div class="slide">
-          <img src="../img/CAROSELLI/cameretta-industriale.jpeg" alt="Immagine 2" onclick="openImage(this)">
+          <img src="img/CAROSELLI/salotto-classico.jpeg" alt="Immagine 2" onclick="openImage(this)">
         </div>
         <div class="slide">
-          <img src="../img/CAROSELLI/cameretta-minimal.jpeg" alt="Immagine 3" onclick="openImage(this)">
+          <img src="img/CAROSELLI/saladapranzo-classica.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
+        <div class="slide">
+          <img src="img/CAROSELLI/camera-classica.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
+        <div class="slide">
+          <img src="img/CAROSELLI/cameretta-classica.jpeg" alt="Immagine 3" onclick="openImage(this)">
+        </div>
+        <div class="slide">
+          <img src="img/CAROSELLI/bagno-classico.jpeg" alt="Immagine 3" onclick="openImage(this)">
         </div>
     
         <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -742,7 +751,7 @@
         <!-- Card 1: Cucina Provenza -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/HOME PAGE IMM/cucina-provenza.jpeg" alt="Cucina Provenza">
+                <img src="img/HOME PAGE IMM/cucina-provenza.jpeg" alt="Cucina Provenza">
             </div>
             <div class="ambiente-info">
                 <h3>Cucina Provenza</h3>
@@ -757,7 +766,7 @@
         <!-- Card 2: Salotto Modigliani -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/salotto-classico.jpeg" alt="Salotto Modigliani">
+                <img src="img/CAROSELLI/salotto-classico.jpeg" alt="Salotto Modigliani">
             </div>
             <div class="ambiente-info">
                 <h3>Salotto Modigliani</h3>
@@ -772,7 +781,7 @@
         <!-- Card 3: Sala da pranzo color vintage -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/saladapranzo-classica.jpeg" alt="Sala da pranzo color vintage">
+                <img src="img/CAROSELLI/saladapranzo-classica.jpeg" alt="Sala da pranzo color vintage">
             </div>
             <div class="ambiente-info">
                 <h3>Sala da pranzo color vintage</h3>
@@ -787,7 +796,7 @@
         <!-- Card 4: Camera da letto mosaico blu -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/camera-classica.jpeg" alt="Camera da letto mosaico blu">
+                <img src="img/CAROSELLI/camera-classica.jpeg" alt="Camera da letto mosaico blu">
             </div>
             <div class="ambiente-info">
                 <h3>Camera da letto mosaico blu</h3>
@@ -801,7 +810,7 @@
         <!-- Card 5: Cameretta Camilla -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/cameretta-classica.jpeg" alt="Cameretta Camilla">
+                <img src="img/CAROSELLI/cameretta-classica.jpeg" alt="Cameretta Camilla">
             </div>
             <div class="ambiente-info">
                 <h3>Cameretta Camilla</h3>
@@ -816,7 +825,7 @@
         <!-- Card 6: Bagno ciliegio -->
         <div class="card-ambiente">
             <div class="img-container">
-                <img src="../img/CAROSELLI/bagno-classico.jpeg" alt="Bagno ciliegio">
+                <img src="img/CAROSELLI/bagno-classico.jpeg" alt="Bagno ciliegio">
             </div>
             <div class="ambiente-info">
                 <h3>Bagno ciliegio</h3>
